// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiRadioGroup is rendered 1`] = `
<div
  aria-label="aria-label"
  class="testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`OuiRadioGroup props idSelected is rendered 1`] = `
<div>
  <div
    class="ouiRadio ouiRadioGroup__item"
  >
    <input
      checked=""
      class="ouiRadio__input"
      id="1"
      type="radio"
    />
    <div
      class="ouiRadio__circle"
    />
    <label
      class="ouiRadio__label"
      for="1"
    >
      Option #1
    </label>
  </div>
  <div
    class="ouiRadio ouiRadioGroup__item"
  >
    <input
      class="ouiRadio__input"
      id="2"
      type="radio"
    />
    <div
      class="ouiRadio__circle"
    />
    <label
      class="ouiRadio__label"
      for="2"
    >
      Option #2
    </label>
  </div>
</div>
`;

exports[`OuiRadioGroup props legend is rendered 1`] = `
<fieldset>
  <legend
    class="ouiFormLegend"
  >
    A legend
  </legend>
  <div
    class="ouiRadio ouiRadioGroup__item"
  >
    <input
      class="ouiRadio__input"
      id="1"
      type="radio"
    />
    <div
      class="ouiRadio__circle"
    />
    <label
      class="ouiRadio__label"
      for="1"
    >
      Option #1
    </label>
  </div>
  <div
    class="ouiRadio ouiRadioGroup__item"
  >
    <input
      class="ouiRadio__input"
      id="2"
      type="radio"
    />
    <div
      class="ouiRadio__circle"
    />
    <label
      class="ouiRadio__label"
      for="2"
    >
      Option #2
    </label>
  </div>
</fieldset>
`;

exports[`OuiRadioGroup props name is propagated to radios 1`] = `
<div>
  <div
    class="ouiRadio ouiRadioGroup__item"
  >
    <input
      class="ouiRadio__input"
      id="1"
      name="radiogroupname"
      type="radio"
    />
    <div
      class="ouiRadio__circle"
    />
    <label
      class="ouiRadio__label"
      for="1"
    >
      Option #1
    </label>
  </div>
  <div
    class="ouiRadio ouiRadioGroup__item"
  >
    <input
      class="ouiRadio__input"
      id="2"
      name="radiogroupname"
      type="radio"
    />
    <div
      class="ouiRadio__circle"
    />
    <label
      class="ouiRadio__label"
      for="2"
    >
      Option #2
    </label>
  </div>
</div>
`;

exports[`OuiRadioGroup props options are rendered 1`] = `
<div>
  <div
    class="ouiRadio ouiRadioGroup__item"
  >
    <input
      class="ouiRadio__input"
      id="1"
      type="radio"
    />
    <div
      class="ouiRadio__circle"
    />
    <label
      class="ouiRadio__label"
      for="1"
    >
      Option #1
    </label>
  </div>
  <div
    class="ouiRadio ouiRadioGroup__item"
  >
    <input
      class="ouiRadio__input"
      disabled=""
      id="2"
      type="radio"
    />
    <div
      class="ouiRadio__circle"
    />
    <label
      class="ouiRadio__label"
      for="2"
    >
      Option #2
    </label>
  </div>
</div>
`;

exports[`OuiRadioGroup props value is propagated to radios 1`] = `
<div>
  <div
    class="ouiRadio ouiRadioGroup__item"
  >
    <input
      class="ouiRadio__input"
      id="1"
      name="radiogroupname"
      type="radio"
      value="Value #1"
    />
    <div
      class="ouiRadio__circle"
    />
    <label
      class="ouiRadio__label"
      for="1"
    >
      Option #1
    </label>
  </div>
  <div
    class="ouiRadio ouiRadioGroup__item"
  >
    <input
      class="ouiRadio__input"
      id="2"
      name="radiogroupname"
      type="radio"
      value="Value #2"
    />
    <div
      class="ouiRadio__circle"
    />
    <label
      class="ouiRadio__label"
      for="2"
    >
      Option #2
    </label>
  </div>
</div>
`;
